# rotmguard

./: .gitignore  Cargo.toml  LICENSE  README.md  log-1.txt  log-2.txt  log-3.txt  rotmguard.toml
.github/workflows/: rust.yml
src/: asset_extract.rs  assets.rs  config.rs  constants.rs  damage_monitor_http_server.rs  fetch_server_list.rs  flushskip_stats.rs  gen_this_macro.rs  iptables.rs  logging.rs  main.rs  module.rs  packet_ids.rs  packet_logger.rs  packets.rs  protocol.rs  proxy.rs  rc4.rs  read.rs  rotmguard.rs  stats.rs  tests.rs  util.rs  write.rs
src-old/: config.rs  iptables.rs  logging.rs  main.rs  packets.rs  proxy.rs  read.rs  write.rs
src-old/assets/: mod.rs  reverse_changes.rs  xml.rs
src-old/extra_datatypes/: conditions.rs  object_status_data.rs
src-old/module/: fake_slow.rs  stats.rs
src-old/module/autonexus/: aoes.rs
src-old/packets/: _103_ground_damage.rs  _18_goto.rs  _42_update.rs  _45_reconnect.rs  _64_aoe.rs  _90_player_hit.rs
src-old/util/: notification.rs
src/assets/: get_sprite.rs  mod.rs  process.rs  raw_parse.rs  reverse_changes.rs  spritesheetf.rs  xml.rs
src/assets/process/: modify.rs  sprites.rs  xml.rs
src/assets/xml/: cult_staff.rs  enemy_projectiles.rs
src/damage_monitor_http_server/: report_util.rs
src/extra_datatypes/: mod.rs  object_status_data.rs  statdata.rs  worldpos.rs
src/module/: anti_push.rs  antidebuffs.rs  autonexus.rs  commands.rs  con.rs  cult_staff.rs  fake_slow.rs  general.rs  stats.rs
src/module/autonexus/: aoes.rs  ground.rs  heals.rs  passive.rs  projectiles.rs
src/packets/: _101_create_success.rs  _103_ground_damage.rs  _10_new_tick.rs  _11_show_effect.rs  _18_goto.rs  _30_player_shoot.rs  _35_enemy_shoot.rs  _42_update.rs  _44_text.rs  _45_reconnect.rs  _62_move.rs  _64_aoe.rs  _67_notification.rs  _90_player_hit.rs  _9_player_text.rs
src/protocol/: packet_ids.rs  packets.rs  primitives.rs  util.rs
src/protocol/packets/: newtick.rs  notification.rs  playertext.rs  reconnect.rs  update.rs
src/proxy/: logic.rs  packets.rs  reader.rs  writer.rs
src/proxy/logic/: antilag.rs  antipush.rs  autonexus.rs  cheats.rs  commands.rs  (+7 more)
src/rotmguard/: commands.rs
src/util/: create_packet.rs  notification.rs  packet_ids.rs  stat_types.rs  view.rs
templates/: damage_report.html
(+60 files in other folders)
