[package]
name = "rotmguard"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
byteorder = "1.5.0"
chrono = "0.4.38"
derivative = "2.2.0"
enum_dispatch = "0.3.13"
file-owner = "0.1.2"
hex = "0.4.3"
iptables = "0.5.1"
json5 = "0.4.1"
lru = "0.12.3"
nix = { version = "0.29.0", features = ["socket", "net"] }
phf = { version = "0.11.2", features = ["macros"] }
rand = "0.8.5"
rc4 = "0.1.0"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.13"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
xmltree = "0.10.3"
