[package]
name = "rotmguard"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
byteorder = "1.5.0"
bytes = "1.10.1"
chrono = "0.4.38"
either = "1.15.0"
futures = "0.3.31"
json5 = "0.4.1"
lru = "0.12.3"
nix = { version = "0.29.0", features = ["socket", "net", "signal"] }
reqwest = "0.12.21" # for fetching server ips
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.13"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
xmltree = "0.10.3"
flatbuffers = "25.2.10"
png = "0.17.16"
base64 = "0.22.1"
hyper = { version = "1.6.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.15", features = ["tokio"] }
webbrowser = "1.0.5"
askama = "0.14.0"
ctrlc = { version = "3.4.7", features = ["termination"] }
rayon = "1.10.0"
arrayvec = "0.7.6"
num_enum = "0.7.4"